# cortexflow

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
agents/: __init__.py  base_agent.py  code_analyzer.py  config_extractor.py  exploit_suggester.py  memory_forensics.py  monitor_agent.py  network_analyzer.py  orchestrator.py  report_generator.py  threat_intel.py  vuln_scanner.py
api/: __init__.py  auth.py  server.py
cli/: __init__.py  main.py
config/: config.yaml
core/: __init__.py  engine.py  pipeline.py  plugin_manager.py  queue.py  token_tracker.py
docs/: architecture.md
examples/: api_client_example.py  binary_analysis_example.py  code_review_example.py
mcp/: server.py
plugins/example_plugin/: manifest.yaml  plugin.py
providers/: __init__.py  anthropic.py  base.py  factory.py  google.py  mimo.py  ollama.py  openai.py
storage/: __init__.py  database.py  models.py  repositories.py
tests/: conftest.py  test_agents.py  test_plugins_auth.py  test_providers.py  test_storage.py
web/: index.html
web/css/: style.css
web/js/: api.js  dashboard.js
workflows/: binary_analysis.yaml  code_review.yaml  network_recon.yaml  threat_hunting.yaml
