[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexflow"
version = "2.0.0"
description = "Multi-Agent AI Orchestration Platform for Security Analysis"
authors = [{ name = "CortexFlow Team" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "security", "agents", "llm", "orchestration", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
cortexflow = "cli.main:run_cli"
cf = "cli.main:run_cli"

[project.urls]
Homepage = "https://github.com/s7537700-sketch/cortexflow"
Documentation = "https://github.com/s7537700-sketch/cortexflow/tree/main/docs"
Repository = "https://github.com/s7537700-sketch/cortexflow"
Issues = "https://github.com/s7537700-sketch/cortexflow/issues"

[tool.setuptools.packages.find]
include = ["agents*", "core*", "providers*", "storage*", "api*", "cli*", "mcp*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "N802", "N803"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
